fixed font kerning. Messed up by text-rendering: optimizelegibly. Changed to auto.

--- a/themes/howardmobley/assets/less/style.less
+++ b/themes/howardmobley/assets/less/style.less
@@ -34,6 +34,11 @@ a:hover, a:active {
 blockquote { 
 }
 small { font-size: 80%; }
+
+h1, h2, h3, h4, h5, h6 {
+	text-rendering: auto;
+}
+
 h1 {
 	color: @white;
 	font-size: 27px;
